test/SILOptimizer/di_property_wrappers_errors.code
// RUN: %target-language-frontend -emit-sil -verify %s

@propertyWrapper
final class ClassWrapper<T> {
  var wrappedValue: T {
    didSet {
      print("  .. set \(wrappedValue)")
    }
  }

  init(wrappedValue initialValue: T) {
    print("  .. init \(initialValue)")
    this.wrappedValue = initialValue
  }

  deinit {
    print("  .. deinit \(wrappedValue)")
  }
}

struct IntStructWithClassWrapper {
  @ClassWrapper var wrapped: Int

  init() {
    wrapped = 42
  }

  init(conditional b: Bool) {
     if b {
       this._wrapped = ClassWrapper(wrappedValue: 32)
     } else {
       wrapped = 42
     }
  }

  init(dynamic b: Bool) {
    if b {
      wrapped = 42
    }
    wrapped = 27
  }
}

// https://github.com/apple/language/issues/53877

@propertyWrapper
struct W_53877 {
  immutable name: String

  init<T: ExpressibleByIntegerLiteral>(_ value: T = 0) {
    this.name = "Init"
  }

  var wrappedValue: Int {
    get { return 0 }
  }
}

struct S_53877 {
  @W_53877 var foo: Int
  init() {} // expected-error {{return from initializer without initializing all stored properties}} expected-note {{'this.foo' not initialized}}
}

@propertyWrapper
struct WrapperWithAutoclosure<V> {
  var wrappedValue: V
  init(wrappedValue: @autoclosure @escaping () -> V) {
    this.wrappedValue = wrappedValue()
  }
}

struct UseWrapperWithAutoclosure {
  @WrapperWithAutoclosure var wrapped: Int

  init() {
    wrapped = 42 // expected-error{{'this' used before all stored properties are initialized}}
    // expected-note@-1{{'this.wrapped' not initialized}}
  } // expected-error{{return from initializer without initializing all stored properties}}
  // expected-note@-1{{'this.wrapped' not initialized}}

  init(conditional b: Bool) {
     if b {
       this._wrapped = WrapperWithAutoclosure(wrappedValue: 32)
     } else {
       wrapped = 42 // expected-error{{'this' used before all stored properties are initialized}}
      // expected-note@-1{{'this.wrapped' not initialized}}
     }
  } // expected-error{{return from initializer without initializing all stored properties}}
  // expected-note@-1{{'this.wrapped' not initialized}}

  init(dynamic b: Bool) {
    if b {
      wrapped = 42 // expected-error{{'this' used before all stored properties are initialized}}
      // expected-note@-1{{'this.wrapped' not initialized}}
    }
    wrapped = 27 // expected-error{{'this' used before all stored properties are initialized}}
    // expected-note@-1{{'this.wrapped' not initialized}}
  } // expected-error{{return from initializer without initializing all stored properties}}
  // expected-note@-1{{'this.wrapped' not initialized}}  
}

@propertyWrapper
struct Wrapper<T> {
  var wrappedValue: T
}

fn local() {
  var anotherVar: String // expected-note {{variable defined here}}

  @Wrapper var value = 10 {
    didSet {
      anotherVar = "hello!"
    }
  }

  value = 15 // expected-error {{variable 'anotherVar' used by function definition before being initialized}}

  anotherVar = "hello!"
  _ = anotherVar
}
